--- a/templates/export_form.html
+++ b/templates/export_form.html
@@ -25,12 +25,14 @@
                 <div class="mb-3">
                     <label for="password" class="form-label">密码</label>
                     <input type="password" class="form-control" id="password" name="password" required>
-                    <div class="form-text">123云盘的登录密码（担心隐私风险? 推荐 <a href="https://github.com/realcwj/123Pan-Unlimited-Share?tab=readme-ov-file#%E6%8E%A8%E8%8D%90%E6%9C%AC%E5%9C%B0%E9%83%A8%E7%BD%B2%E5%8F%AF%E8%A7%86%E5%8C%96%E7%95%8C%E9%9D%A2%E7%BD%91%E9%A1%B5" target="_blank">本地部署</a>）</div>
+                    <div class="form-text">123云盘的登录密码</div>
+                    <div class="form-text"><b>您的账号、密码只在浏览器本地保存</b>（依然担心隐私风险? 推荐 <a href="https://github.com/realcwj/123Pan-Unlimited-Share?tab=readme-ov-file#%E6%8E%A8%E8%8D%90%E6%9C%AC%E5%9C%B0%E9%83%A8%E7%BD%B2%E5%8F%AF%E8%A7%86%E5%8C%96%E7%95%8C%E9%9D%A2%E7%BD%91%E9%A1%B5" target="_blank">本地部署</a>）</div>
                 </div>
                 <div class="mb-3">
                     <label for="userSpecifiedBaseName" class="form-label">根目录名 (分享名)</label>
                     <input type="text" class="form-control" id="userSpecifiedBaseName" name="userSpecifiedBaseName" placeholder="例如: 我的备份 (可选)">
-                    <div class="form-text">即分享名（其他用户导入时显示的文件夹名，以及下载的 .123share 文件名）。如果留空，将使用时间戳作为文件名。若加入资源共享计划则此项必填。</div>
+                    <div class="form-text">即分享名（其他用户导入时显示的文件夹名，以及下载的 .123share 文件名）。</div>
+                    <div class="form-text">如果留空，将使用时间戳作为文件名。若加入资源共享计划则此项必填。</div>
                 </div>
                 <div class="mb-3">
                     <label for="homeFilePath" class="form-label">文件夹ID</label>
@@ -40,12 +42,14 @@
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="generateShortCode" name="generateShortCode">
                     <label class="form-check-label" for="generateShortCode">生成短分享码</label>
-                    <div class="form-text">勾选后，您本次分享的内容会存储到数据库中，从而生成一个简短的分享码，便于分享。保存的数据是否对公众可见，取决于您是否勾选下方的“加入资源共享计划”。</div>
+                    <div class="form-text">勾选后，<b>本站将会存储导出的数据</b>，从而生成一个简短的分享码，便于分享。</div>
+                    <div class="form-text">保存的数据是否对公众可见，取决于您是否勾选下方的“加入资源共享计划”。</div>
                 </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="shareProject" name="shareProject">
                     <label class="form-check-label" for="shareProject">加入资源共享计划</label>
-                    <div class="form-text">勾选后，将强制生成短分享码，并且要求填写“根目录名 (分享名)”。您本次分享的资源将提交审核，通过后会对所有用户公开可见。</div>
+                    <div class="form-text">勾选后，您本次分享的资源将提交审核，通过后会对所有用户公开可见。</div>
+                    <div class="form-text">勾选本项将强制勾选“生成短分享码”，并且要求填写“根目录名 (分享名)”。</div>
                 </div>
                 <button type="submit" class="btn btn-primary custom-btn w-100">开始导出</button>
             </form>
