--- a/templates/link_form.html
+++ b/templates/link_form.html
@@ -33,22 +33,26 @@
                 <div class="mb-3">
                     <label for="parentFileId" class="form-label">分享文件夹ID</label>
                     <input type="text" class="form-control" id="parentFileId" name="parentFileId" value="0" required>
-                    <div class="form-text">从整个分享链接导出就填0。如果分享的是子目录，需要提供该子目录在分享中的ID (获取方式参考FAQ)。</div>
+                    <div class="form-text">从整个分享链接导出就填0。</div>
+                    <div class="form-text">如果只想导出其中一个子目录，需要提供该子目录在分享中的文件ID。</div>
                 </div>
                 <div class="mb-3">
                     <label for="userSpecifiedBaseName" class="form-label">根目录名 (分享名)</label>
                     <input type="text" class="form-control" id="userSpecifiedBaseName" name="userSpecifiedBaseName" placeholder="例如: 链接中的资料 (可选)">
-                    <div class="form-text">即分享名（其他用户导入时显示的文件夹名，以及下载的 .123share 文件名）。如果留空，将使用时间戳和分享信息作为文件名。若加入资源共享计划则此项必填。</div>
+                    <div class="form-text">即分享名（其他用户导入时显示的文件夹名，以及下载的 .123share 文件名）。</div>
+                    <div class="form-text">如果留空，将使用时间戳作为文件名。若加入资源共享计划则此项必填。</div>
                 </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="generateShortCode" name="generateShortCode">
                     <label class="form-check-label" for="generateShortCode">生成短分享码</label>
-                    <div class="form-text">勾选后，您本次分享的内容会存储到数据库中，从而生成一个简短的分享码，便于分享。保存的数据是否对公众可见，取决于您是否勾选下方的“加入资源共享计划”。</div>
+                    <div class="form-text">勾选后，<b>本站将会存储导出的数据</b>，从而生成一个简短的分享码，便于分享。</div>
+                    <div class="form-text">保存的数据是否对公众可见，取决于您是否勾选下方的“加入资源共享计划”。</div>
                 </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="shareProject" name="shareProject">
                     <label class="form-check-label" for="shareProject">加入资源共享计划</label>
-                    <div class="form-text">勾选后，将强制生成短分享码，并且要求填写“根目录名 (分享名)”。您本次分享的资源将提交审核，通过后会对所有用户公开可见。</div>
+                    <div class="form-text">勾选后，您本次分享的资源将提交审核，通过后会对所有用户公开可见。</div>
+                    <div class="form-text">勾选本项将强制勾选“生成短分享码”，并且要求填写“根目录名 (分享名)”。</div>
                 </div>
                 <button type="submit" class="btn btn-primary custom-btn w-100">从链接导出</button>
             </form>
