⚠️ 修复屏蔽中国大陆IP失败的Bug

--- a/templates/banip.html
+++ b/templates/banip.html
@@ -46,6 +46,9 @@
                 <a href="https://ping0.cc" class="btn btn-outline-secondary custom-btn" style="background-color: transparent; border-color: var(--bs-secondary); color: var(--bs-secondary);">
                     <i class="bi bi-question-circle me-2"></i> 查看我的IP地址
                 </a>
+                <a href="{{ url_for('index') }}" class="btn btn-outline-secondary custom-btn" style="background-color: transparent; border-color: var(--bs-secondary); color: var(--bs-secondary);">
+                    <i class="bi bi-house me-2"></i> 尝试返回首页
+                </a>
             </div>
         </div>
     </div>
