--- a/templates/export_form.html
+++ b/templates/export_form.html
@@ -26,7 +26,7 @@
                     <label for="password" class="form-label">密码</label>
                     <input type="password" class="form-control" id="password" name="password" required>
                     <div class="form-text">123云盘的登录密码</div>
-                    <div class="form-text"><b>您的账号、密码只在浏览器本地保存</b>（依然担心隐私风险? 推荐 <a href="https://github.com/realcwj/123Pan-Unlimited-Share?tab=readme-ov-file#%E6%8E%A8%E8%8D%90%E6%9C%AC%E5%9C%B0%E9%83%A8%E7%BD%B2%E5%8F%AF%E8%A7%86%E5%8C%96%E7%95%8C%E9%9D%A2%E7%BD%91%E9%A1%B5" target="_blank">本地部署</a>）</div>
+                    <div class="form-text"><b>您的账号、密码只在浏览器本地保存</b>（依然担心隐私风险? 推荐 <a href="https://github.com/realcwj/123Pan-Unlimited-Share?tab=readme-ov-file#%E5%A6%82%E4%BD%95%E4%BD%BF%E7%94%A8" target="_blank">本地部署</a>）</div>
                 </div>
                 <div class="mb-3">
                     <label for="userSpecifiedBaseName" class="form-label">根目录名 (分享名)</label>
