--- a/templates/export_form.html
+++ b/templates/export_form.html
@@ -98,9 +98,9 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // 将后端URL传递给JavaScript
         window.APP_CONFIG = {
-            apiExportUrl: "{{ url_for('api_export_route') }}"
+            apiExportUrl: "{{ url_for('api_export_route') }}",
+            banIpEnabled: {{ BAN_IP_ENABLED | tojson }}
         };
     </script>
     <script src="{{ url_for('static', filename='js/cookieUtils.js') }}"></script>
