--- a/templates/link_form.html
+++ b/templates/link_form.html
@@ -102,7 +102,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         window.APP_CONFIG = {
-            apiLinkUrl: "{{ url_for('api_link_route') }}"
+            apiLinkUrl: "{{ url_for('api_link_route') }}",
+            banIpEnabled: {{ BAN_IP_ENABLED | tojson }}
         };
     </script>
     <script src="{{ url_for('static', filename='js/uiUtils.js') }}"></script>
