🧪 实验性：增加 123FastLink 格式互转页面

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,8 @@
                 </a>
                 <a href="{{ url_for('link_page') }}" class="btn btn-primary custom-btn"> <i class="bi bi-link-45deg me-2"></i> 从分享链接导出
                 </a>
+                <a href="{{ url_for('transform_page') }}" class="btn btn-primary custom-btn"> <i class="bi bi-arrow-repeat me-2"></i> 123FastLink格式互转
+                </a>
             </div>
         </div>
     </div>
